@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-07T00:53:31Z",
-  "count" : 295,
+  "timestamp" : "2024-05-20T00:55:13Z",
+  "count" : 247,
   "count_minmax" : [ 112, 295 ],
-  "count_decinc" : [ -0, +295 ],
+  "count_decinc" : [ -48, +295 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
